--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
   </head>
 
   <body>
-    <%= yield %>
+
+   <div clas="navbar.navbar-fluid-top">
+      <div class="navbar-inner" id="header">
+        <div class="container-fluid">
+         
+		<%= yield %>
+    </div>
+    </div>
+    </div>
   </body>
 </html>
