--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,13 @@
 Hello Sign Demo Testing App..
+
+
+
+span You may be interested in the following:
+
+<ul>
+  <li> <%=link_to 'Embedded Signing', embedded_signing_path %>
+  <li><%=link_to 'Embedded Requesting', embedded_requesting_path %>
+  <li> <%=link_to 'Embedded Requesting from a Template', embedded_template_requesting_path %>
+  <li> <%=link_to 'OAuth Demo', embedded_oauth_demo_path %>
+</ul>
+
