--- a/app/views/embedded/signing.html.erb
+++ b/app/views/embedded/signing.html.erb
@@ -1,4 +1,5 @@
-<h1> Embedded Signing Demo <%="#{@sign_url}"%> </h1>
+<h1> Embedded Signing Demo  </h1>
+<%="#{@sign_url}"%>
 <div class="embeddedSigning">
 
   <p class="intro">  This page demonstrates how you can add an embedded signature request to your Ruby-based web application. </p>
