--- a/app/views/embedded/_embedded_view.html.erb
+++ b/app/views/embedded/_embedded_view.html.erb
@@ -1,5 +1,5 @@
 Embedded View
-<%=HelloSign.client_id%>
+
 <script type="text/javascript" src="//s3.amazonaws.com/cdn.hellofax.com/js/embedded.js">
 </script>
 <script type="text/javascript">
@@ -10,7 +10,8 @@ Embedded View
       allowCancel: true,
       skipDomainVerification: true,
       messageListener: function(eventData) {
-         // do someting
+          alert("HelloSign event received");
+// do someting
       }
   });
 </script>
