--- a/app/views/embedded/_embedded_view.html.erb
+++ b/app/views/embedded/_embedded_view.html.erb
@@ -1,7 +1,8 @@
 Embedded View
 
-<script type="text/javascript" src="//s3.amazonaws.com/cdn.hellofax.com/js/embedded.js">
-</script>
+
+<script type="text/javascript" src="//cdn.dev-hellosign.com/js/embedded.js"></script>
+
 <script type="text/javascript">
 
   HelloSign.init("#{HelloSign.client_id}");
@@ -11,7 +12,6 @@ Embedded View
       skipDomainVerification: true,
       messageListener: function(eventData) {
           alert("HelloSign event received");
-// do someting
       }
   });
 </script>
