--- a/app/views/embedded/_embedded_view.html.erb
+++ b/app/views/embedded/_embedded_view.html.erb
@@ -2,7 +2,7 @@ Embedded View
 
 
 <script type="text/javascript" src="//cdn.dev-hellosign.com/js/embedded.js"></script>
-
+<!-- <script type="text/javascript" src="https://s3.amazonaws.com/cdn.hellosign.com/public/js/hellosign-embedded.LATEST.min.js"></script> -->
 <script type="text/javascript">
 
   HelloSign.init("#{HelloSign.client_id}");
