--- a/app/views/embedded/_embedded_view.html.erb
+++ b/app/views/embedded/_embedded_view.html.erb
@@ -5,7 +5,7 @@ Embedded View
 <script type="text/javascript" src="https://s3.amazonaws.com/cdn.hellosign.com/public/js/hellosign-embedded.LATEST.min.js"></script>
 <script type="text/javascript">
 
-  HelloSign.init(HelloSign.client_id);
+  HelloSign.init(<%= HelloSign.client_id %>);
   HelloSign.open({
       url: <%=raw @sign_url %>,
       allowCancel: true,
